--- a/src/index.scss
+++ b/src/index.scss
@@ -17,6 +17,42 @@ $mainYellow: rgb(159, 160, 134);
 $mainGreen: rgba(0, 153, 4, 1);
 $mainBlue: rgba(0, 212, 255, 1);
 
-.cp{
+.cp {
     cursor: pointer;
+}
+
+.law__input {
+    width: 250px;
+    height: 50px;
+    padding: 20px;
+    font-size: 1rem;
+    margin: 20px;
+    border: none;
+}
+
+.law__input--border {
+    padding: 20px 56px 20px 20px;
+    margin: 10px 0 20px 0;
+    border: solid 2px $mainGreen;
+}
+
+.material-icons-two-tone {
+    font-size: 3rem;
+}
+
+.pr {
+    position: relative;
+}
+
+.error {
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    position: absolute;
+    bottom: 0;
+    width: auto;
+    height: 60px;
+    background-color: #ff4a4a;
+    color: white;
+    font-size: 1.5rem;
 }
