--- a/src/index.scss
+++ b/src/index.scss
@@ -69,6 +69,10 @@ $mainBlue: rgba(0, 212, 255, 1);
     font-size: 1.3rem;
     cursor: pointer;
     box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+    &.btn--green{
+        background: $mainGreen;
+        color: white;
+    }
 }
 
 .logo--big {
